Fix right margin on small screens

--- a/style.css
+++ b/style.css
@@ -1418,7 +1418,6 @@ footer {
   list-style-position: outside;
   list-style-type: none;
   margin-left: 8px;
-  margin-right: 8px;
   padding: 12px;
   text-align: center;
   color: white;
